Fix video cropping and add debug logging

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1543,7 +1543,8 @@ p {
 
 .intro-video {
     width: 100%;
-    height: 100%;
+    height: auto;
+    max-height: 600px;
     object-fit: contain;
     display: block;
     border-radius: 30px;
